--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sparks",
+	"name": "studyzone",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -20,6 +20,7 @@
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
+		"svelte-preprocess-import-assets": "^1.1.0",
 		"tailwindcss": "^3.3.5",
 		"vite": "^4.4.2"
 	},
