--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@kinde-oss/kinde-auth-sveltekit": "^1.2.2",
 		"@supabase/auth-helpers-sveltekit": "^0.10.7",
 		"@supabase/supabase-js": "^2.39.1",
 		"unsplash-js": "^7.0.18"
